# See3DLine

./: CMakeLists.txt  LICENSE  ReadMe.md  ReadMe_ru.md
cpp/: Graphics.cpp  Math.cpp  ScreenLines.cpp  ScreenSettings.cpp  main.cpp
hpp/: Graphics.hpp  Math.hpp  Screen.hpp  ScreenLines.hpp  ScreenSettings.hpp
shapes/: 3angle_1.shape  3angle_m.shape  4angle_1.shape  4angle_m.shape  Face.shape  File's name.shape  Negative.shape  angle.shape  height.shape
